--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "release",
+  "name": "release-tag",
   "version": "0.1.4",
   "main": "index.js",
   "author": "Jefferson Daniel <jeffersondanielss@gmail.com>",
@@ -13,7 +13,7 @@
     "inquirer": "^3.3.0"
   },
   "bin": {
-    "release": "index.js"
+    "release-tag": "index.js"
   },
   "devDependencies": {
     "jshint": "^2.9.5",
